--- a/_sass/layout/_layout-primary-first.scss
+++ b/_sass/layout/_layout-primary-first.scss
@@ -5,9 +5,6 @@
  */
 
 .layout-primary-first {
-  @media #{$mobile} {
-    margin-bottom: em(30);
-  }
   @media (min-width: 1024px) {
     @include clearfix;
   }
