--- a/_sass/layout/_layout-site-container.scss
+++ b/_sass/layout/_layout-site-container.scss
@@ -19,4 +19,7 @@
     background: $white;
     border: 1px solid $lightgrey;
   }
+  @media (min-width: 768px) and (max-width: 1100px) {
+    margin: 0 30px;
+  }
 }
